--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
+Imports: purrr, glue, lazyeval, dplyr, readxl, magrittr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
