More error checking/testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(dplyr,select_)
 importFrom(dplyr,summarize)
 importFrom(dplyr,transmute)
 importFrom(dplyr,transmute_)
+importFrom(glue,glue)
 importFrom(lazyeval,as.lazy_dots)
 importFrom(lazyeval,lazy)
 importFrom(lazyeval,lazy_dots)
