--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,transmute)
 importFrom(dplyr,transmute_)
 importFrom(glue,glue)
+importFrom(lazyeval,as.lazy)
 importFrom(lazyeval,as.lazy_dots)
 importFrom(lazyeval,lazy)
 importFrom(lazyeval,lazy_dots)
