--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,8 @@ r_packages:
   - covr
 after_success:
   - Rscript -e 'library(covr); codecov()'
+install:
+- R -e 'devtools::install_deps(dep = T)'
+script:
+- travis_wait R CMD build .
+- travis_wait R CMD check *tar.gz
