--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,5 +15,7 @@ Imports: glue, lazyeval, dplyr, magrittr,
 License: AGPL-3
 Encoding: UTF-8
 LazyData: true
-Suggests: testthat
+Suggests: 
+    testthat,
+    covr
 RoxygenNote: 6.1.1
