Removed unneeded code, added a bit more testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,9 @@ S3method("[",namespace)
 S3method(as.character,heRovar)
 S3method(export,default)
 S3method(export,namespace)
-S3method(export,namespaces)
-S3method(merge,namespace)
 S3method(print,heRovar)
 S3method(print,heRovar_list)
 S3method(sort,heRovar_list)
-S3method(update,namespace)
 export("%+%")
 export("%>%")
 export(bootstrap)
@@ -26,6 +23,7 @@ export(resample)
 export(vswitch)
 import(dplyr)
 import(furrr)
+import(openxlsx)
 import(purrr)
 importFrom(crayon,"%+%")
 importFrom(lazyeval,as.lazy)
