More code coverage, eliminated warnings/notes on --as-cran.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,14 +4,12 @@ S3method("[",heRovar_list)
 S3method("[",namespace)
 S3method(as.character,heRovar)
 S3method(export,default)
-S3method(export,namespace)
 S3method(print,heRovar)
 S3method(print,heRovar_list)
 S3method(sort,heRovar_list)
-export("%+%")
+S3method(summary,namespace)
 export("%>%")
 export(bootstrap)
-export(clone_namespace)
 export(define_namespace)
 export(evaluate_model)
 export(export)
@@ -23,12 +21,14 @@ export(resample)
 export(vswitch)
 import(dplyr)
 import(furrr)
+import(future)
 import(openxlsx)
 import(purrr)
-importFrom(crayon,"%+%")
 importFrom(lazyeval,as.lazy)
 importFrom(lazyeval,as.lazy_dots)
 importFrom(lazyeval,lazy)
 importFrom(lazyeval,lazy_dots)
 importFrom(lazyeval,lazy_eval)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
+importFrom(utils,capture.output)
