--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: An R package for creating and running reproducible and
   creating using a consistent tabular structure which defines features
   of the model such as the strategies being compared and the health
   states between which patients transit.
-Imports: glue, lazyeval, dplyr, magrittr,
+Imports: glue, lazyeval, dplyr, magrittr, future,
   tidyr, furrr, stringr, DT, readr, tibble, mvnfast, crayon, openxlsx,
   knitr, rmarkdown, kableExtra, rlang, purrr
 License: AGPL-3
