--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,19 +3,27 @@
 S3method("[",heRovar_list)
 S3method("[",namespace)
 S3method(as.character,heRovar)
+S3method(as.heRovar_list,list)
 S3method(export,default)
+S3method(get_prob,cond_prob)
+S3method(get_prob,subtree)
 S3method(print,heRovar)
 S3method(print,heRovar_list)
 S3method(sort,heRovar_list)
 S3method(summary,namespace)
 export("%>%")
+export(as.heRovar_list)
 export(bootstrap)
+export(decision_tree)
+export(define_decision_trees)
 export(define_namespace)
 export(evaluate_model)
 export(export)
+export(get_prob)
 export(lognormal)
 export(look_up)
 export(normal)
+export(p)
 export(read_workbook)
 export(resample)
 export(vswitch)
@@ -24,11 +32,13 @@ import(furrr)
 import(future)
 import(openxlsx)
 import(purrr)
+importFrom(glue,glue)
 importFrom(lazyeval,as.lazy)
 importFrom(lazyeval,as.lazy_dots)
+importFrom(lazyeval,interp)
 importFrom(lazyeval,lazy)
-importFrom(lazyeval,lazy_dots)
 importFrom(lazyeval,lazy_eval)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
+importFrom(rlang,sym)
 importFrom(utils,capture.output)
