Basic plotting of decision trees & improved error handling.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(as.heRovar_list,list)
 S3method(export,default)
 S3method(get_prob,cond_prob)
 S3method(get_prob,subtree)
+S3method(print,heRo_error)
 S3method(print,heRovar)
 S3method(print,heRovar_list)
 S3method(sort,heRovar_list)
@@ -24,14 +25,18 @@ export(lognormal)
 export(look_up)
 export(normal)
 export(p)
+export(plot_decision_tree)
 export(read_workbook)
 export(resample)
 export(vswitch)
 import(dplyr)
 import(furrr)
 import(future)
+import(ggplot2)
+import(ggraph)
 import(openxlsx)
 import(purrr)
+import(tidygraph)
 importFrom(glue,glue)
 importFrom(lazyeval,as.lazy)
 importFrom(lazyeval,as.lazy_dots)
