--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache: packages
 r_packages:
   - covr
 install:
-- apt-get install libudunits2-dev
+- sudo apt-get install libudunits2-dev
 - R -e 'install.packages("devtools", repos = "http://cran.rstudio.com")'
 - R -e 'devtools::install_deps(dep = T)'
 script:
