Added test model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(look_up)
 export(normal)
 export(p)
 export(plot_decision_tree)
+export(read_model)
 export(read_workbook)
 export(resample)
 export(vswitch)
