--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,10 +18,12 @@ export(bootstrap)
 export(decision_tree)
 export(define_decision_trees)
 export(define_namespace)
+export(evaluate_longform_matrix)
 export(evaluate_model)
 export(export)
 export(get_prob)
 export(lognormal)
+export(longform_to_wide_matrix)
 export(look_up)
 export(normal)
 export(p)
@@ -38,6 +40,7 @@ import(ggraph)
 import(openxlsx)
 import(purrr)
 import(tidygraph)
+import(tidyr)
 importFrom(glue,glue)
 importFrom(lazyeval,as.lazy)
 importFrom(lazyeval,as.lazy_dots)
