--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(export)
 export(get_prob)
 export(lognormal)
 export(longform_to_wide_matrix)
+export(longform_to_wide_matrix1)
 export(look_up)
 export(normal)
 export(p)
@@ -41,6 +42,7 @@ import(openxlsx)
 import(purrr)
 import(tidygraph)
 import(tidyr)
+importFrom(Rcpp,sourceCpp)
 importFrom(glue,glue)
 importFrom(lazyeval,as.lazy)
 importFrom(lazyeval,as.lazy_dots)
@@ -51,3 +53,4 @@ importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(rlang,sym)
 importFrom(utils,capture.output)
+useDynLib(heRomod2, .registration = TRUE)
