--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ os:
 cache: packages
 r_packages:
   - covr
+before_install:
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install libudunits2-dev; fi
 install:
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo apt-get install libudunits2-dev; fi
 - R -e 'install.packages("devtools", repos = "http://cran.rstudio.com")'
 - R -e 'devtools::install_deps(dep = T)'
 compiler: gcc
