Working longform -> expanded -> wide

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(define_decision_trees)
 export(define_namespace)
 export(evaluate_longform_matrix)
 export(evaluate_model)
+export(expand_eval_longform_matrix)
 export(export)
 export(get_prob)
 export(lognormal)
