wip transition matrices

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,9 +21,11 @@ export(define_namespace)
 export(evaluate_longform_matrix)
 export(evaluate_model)
 export(expand_eval_longform_matrix)
+export(expand_eval_longform_matrix1)
 export(export)
 export(get_prob)
 export(lognormal)
+export(longform_to_array)
 export(longform_to_wide_matrix)
 export(look_up)
 export(normal)
