Fast tmat calculations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,13 +18,12 @@ export(bootstrap)
 export(decision_tree)
 export(define_decision_trees)
 export(define_namespace)
-export(evaluate_longform_matrix)
+export(eval_lf_matrix)
 export(evaluate_model)
-export(expand_eval_longform_matrix)
+export(expand_lf_matrix)
 export(export)
 export(get_prob)
 export(lognormal)
-export(longform_to_array)
 export(look_up)
 export(normal)
 export(p)
