--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,15 @@
 
 S3method("[",heRovar_list)
 S3method("[",namespace)
-S3method(as.character,heRovar)
+S3method(as.character,heRoFormula)
+S3method(as.heRoFormula,character)
+S3method(as.heRoFormula,heRoFormula)
+S3method(as.heRoFormula,lazy)
+S3method(as.heRoFormula,list)
+S3method(as.heRoFormula,numeric)
 S3method(as.heRovar_list,list)
+S3method(as.lf_markov_trans,data.frame)
+S3method(as.lf_markov_trans,lf_markov_trans)
 S3method(export,default)
 S3method(get_prob,cond_prob)
 S3method(get_prob,subtree)
@@ -13,16 +20,18 @@ S3method(print,heRovar_list)
 S3method(sort,heRovar_list)
 S3method(summary,namespace)
 export("%>%")
+export(C)
+export(as.heRoFormula)
 export(as.heRovar_list)
+export(as.lf_markov_trans)
 export(bootstrap)
 export(decision_tree)
 export(define_decision_trees)
 export(define_namespace)
-export(eval_lf_matrix)
-export(evaluate_model)
-export(expand_lf_matrix)
+export(evaluate_values)
 export(export)
 export(get_prob)
+export(lf_to_matrix)
 export(lognormal)
 export(look_up)
 export(normal)
@@ -31,6 +40,7 @@ export(plot_decision_tree)
 export(read_model)
 export(read_workbook)
 export(resample)
+export(run_model)
 export(vswitch)
 import(dplyr)
 import(furrr)
@@ -50,4 +60,6 @@ importFrom(lazyeval,lazy_eval)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(rlang,sym)
+importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
 importFrom(utils,capture.output)
