--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(as.lf_markov_trans,lf_markov_trans)
 S3method(export,default)
 S3method(get_prob,cond_prob)
 S3method(get_prob,subtree)
+S3method(print,heRoFormula)
 S3method(print,heRo_error)
 S3method(print,heRovar)
 S3method(print,heRovar_list)
@@ -31,7 +32,6 @@ export(define_namespace)
 export(evaluate_values)
 export(export)
 export(get_prob)
-export(lf_to_matrix)
 export(lognormal)
 export(look_up)
 export(normal)
