--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,8 +50,10 @@ importFrom(lazyeval,interp)
 importFrom(lazyeval,lazy)
 importFrom(lazyeval,lazy_eval)
 importFrom(magrittr,"%>%")
+importFrom(readr,read_csv)
 importFrom(rlang,.data)
 importFrom(rlang,sym)
+importFrom(stringr,str_split_fixed)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,capture.output)
