--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(bootstrap)
 export(decision_tree)
 export(define_namespace)
 export(evaluate_values)
+export(evaluate_values2)
 export(export)
 export(get_prob)
 export(lognormal)
@@ -57,3 +58,4 @@ importFrom(stringr,str_split_fixed)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,capture.output)
+useDynLib(heRomod2)
